// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    aria-label="hello"
    class="css-1uocdtg e183qit0"
    color="primary"
    shape="round"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated size 1`] = `
<div>
  <button
    aria-label="hello"
    class="css-1kv5z23 e183qit0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated size 2`] = `
<div>
  <button
    aria-label="hello"
    class="css-1kv5z23 e183qit0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated textTransform 1`] = `
<div>
  <button
    aria-label="hello"
    class="css-161ugik e183qit0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    aria-label="hello"
    class="css-1vpo9ps e183qit0"
    color="primary"
    shape="fill"
  >
    Test Text
  </button>
</div>
`;
